Fix for white bar on mobile

--- a/main.css
+++ b/main.css
@@ -2,10 +2,11 @@
 
 html {
 	height: 100%;
+	background-color: #ACCBE5;
 }
 
 body {
-	background-color: #99B3CC;
+	background-color: #ACCBE5;
 	background-image: linear-gradient(180deg, white, #B8D8F2 20%, #ACCBE5);
 	height: 98%;
 	font-family: 'Muli', sans-serif;
